--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,20 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+coverage
+coverage.json
+typechain
+typechain-types
+
+#Hardhat files
+cache
+artifacts
+
+#Helper files
+.prettierrc.js
+keys.json
+typings.d.ts
+
+#CMS
+sanity
