--- a/package.json
+++ b/package.json
@@ -9,16 +9,60 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.11",
+    "@metamask/detect-provider": "^1.2.0",
+    "@sanity/image-url": "^1.0.1",
+    "classnames": "^2.3.2",
+    "framer-motion": "^7.5.3",
+    "moment": "^2.29.4",
     "next": "12.3.1",
+    "next-sanity": "^0.8.4",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-hook-form": "^7.37.0",
+    "react-moment": "^1.1.2",
+    "react-simple-typewriter": "^4.0.5",
+    "styled-components": "^5.3.6",
+    "swiper": "^8.4.4",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.21",
+    "@ethersproject/abi": "^5.4.7",
+    "@ethersproject/providers": "^5.4.7",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": ">=12.0.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
+    "chai": "^4.2.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.3"
-  }
+    "ethers": "^5.4.7",
+    "hardhat": "^2.11.1",
+    "hardhat-gas-reporter": "^1.0.8",
+    "postcss": "^8.4.16",
+    "solidity-coverage": "^0.8.0",
+    "tailwindcss": "^3.1.8",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.1.0",
+    "typescript": ">=4.5.0"
+  },
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.",
+  "main": ".prettierrc.js",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
